# browser-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  todos.md
.githooks/: pre-commit  pre-push
.github/: pull_request_template.md
.github/workflows/: architecture-guard.yml  ci.yml  release.yml
browser-cli-extension/: manifest.json  offscreen.html  popup.html
browser-cli-extension/src/: background.js  debugger.js  offscreen.js  page_runtime.js  popup.css  popup.js  popup_view.js  protocol.js
browser-cli-extension/src/background/: artifact_actions.js  dialog_actions.js  input_actions.js  locator_actions.js  observe_actions.js  page_actions.js  trace_actions.js  video_actions.js  workspace.js
browser-cli-extension/tests/: debugger.test.js  popup_view.test.js
docs/: browser-cli-project-guide-zh.md  browser-cli-usage-guide-zh.md  extension-driver-gaps.md  install-skills.md  installed-with-pip.md  installed-with-uv.md  smoke-checklist.md  uninstall.md
docs/examples/: task-and-automation.md  task-and-workflow.md
docs/superpowers/plans/: 2026-04-08-browser-cli-v1-implementation-plan.md  2026-04-08-sitecli-v1-implementation-plan.md  2026-04-09-browser-cli-semantic-ref-task-workflow-skill-implementation-plan.md  2026-04-09-browser-cli-v2-agent-actions-implementation-plan.md  2026-04-10-browser-cli-dual-driver-extension-implementation-plan.md  2026-04-10-browser-cli-status-reload-implementation-plan.md  2026-04-11-browser-cli-extension-driver-parity-refactor-implementation-plan.md  2026-04-11-browser-cli-network-response-body-implementation-plan.md  2026-04-12-browser-cli-popup-runtime-polish.md  2026-04-12-browser-cli-workflow-publish-layer-implementation-plan.md  2026-04-13-browser-cli-long-run-stability-implementation-plan.md  2026-04-13-browser-cli-pip-user-ux-roadmap-implementation-plan.md  2026-04-13-browser-cli-task-automation-implementation-plan.md  2026-04-14-automation-manifest-roundtrip-implementation-plan.md  2026-04-14-browser-cli-delivery-skills-implementation-plan.md  2026-04-14-browser-cli-douyin-automation-packaging-plan.md  (+10 more)
scripts/: __init__.py  check.sh  generate_packaged_skill_docs.py  guard.sh  lint.sh  test.sh
scripts/guards/: __init__.py  architecture.py  common.py  docs_sync.py  product_contracts.py  python_compatibility.py  run_all.py
skills/browser-cli-converge/: SKILL.md
skills/browser-cli-delivery/: SKILL.md
skills/browser-cli-explore/: SKILL.md
skills/browser-cli-explore-delivery/: SKILL.md
src/browser_cli/: __init__.py  constants.py  error_codes.py  errors.py  exit_codes.py  network.py
tasks/_templates/: automation.toml  task.meta.json  task.py  workflow.toml
tasks/douyin_video_download/: automation.toml  task.meta.json  task.py
tasks/interactive_reveal_capture/: automation.toml  task.meta.json  task.py  workflow.toml
tasks/karpathy_nitter_latest_five/: task.meta.json  task.py
tasks/lazy_scroll_capture/: automation.toml  task.meta.json  task.py  workflow.toml
tests/: __init__.py  conftest.py
tests/integration/: fixture_server.py  test_daemon_actions.py  test_read_runner.py  test_runtime_stability.py  test_task_cli.py  test_task_runtime_read.py  test_workflow_runner.py
tests/unit/: test_action_catalog.py  test_agent_scope.py  test_automation_api.py  test_automation_commands.py  test_automation_projections.py  test_automation_publish.py  test_automation_service.py  test_browser_models.py  test_browser_service.py  test_browser_stealth.py  test_cli.py  test_daemon_app_validation.py  test_daemon_browser_service.py  test_daemon_client.py  test_daemon_run_registry.py  test_daemon_server.py  test_doctor_command.py  test_error_hints.py  test_extension_driver_actions.py  test_extension_transport.py  test_guard_scripts.py  test_install_skills_command.py  test_json_errors.py  test_lifecycle_commands.py  test_network.py  test_package_version.py  test_paths_command.py  test_profile_discovery.py  test_python_compat_guard.py  test_python_compatibility.py  test_recovery_commands.py  test_release_artifacts.py  test_repo_metadata.py  test_repo_skill_docs.py  test_repo_text_contracts.py  test_repo_workflows.py  test_runtime_presentation.py  test_semantic_refs.py  test_task_commands.py  test_task_entrypoint.py  (+6 more)
(+145 files in other folders)
