[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-control-and-automation-cli"
description = "CLI-first browser reader for rendered HTML and page snapshots"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.52,<2",
  "websockets>=12,<16",
  "tomli>=1.2.0; python_version<'3.11'",
]

[project.scripts]
browser-cli = "browser_cli.cli.main:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"browser_cli.packaged_skills" = ["*/SKILL.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# 版本从 git tag 自动推断；发布产物不携带本地版本后缀，避免 PyPI 拒收。
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: tests that use a real browser runtime",
  "smoke: tests or checks intended for manual smoke validation",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = [
  "E501",  # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
show_error_codes = true
